Finished structure to hourly weather, Need to fix issues with nesting accordian within accordian, Hourly accordian will not expand and collapse, Ussing CSS display: box to finish structure setup, Still need to finish styles and add expand all and collapse all buttons

--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,10 @@
 #content-container {
 
 }
+.hour-content {
+	display: block;
+}
+
 #current-weather {
 	background-size:     cover;                      /* <------ */
 	background-repeat:   no-repeat;
@@ -56,4 +60,7 @@
 }
 #current-weather #current-info .celc-fahr {
 	font-size: 0.7rem;
+}
+.hour-content ul li {
+	list-style-type: none;
 }
